Ajout de contenu

--- a/html/00_accueil.html
+++ b/html/00_accueil.html
@@ -9,9 +9,12 @@
 			<br> <!-- Texte -->
 			CABANEL Adrien, 18 ans<br>
 			<strong>Développeur</strong><br>
-			adycabanel@gmail.com<br>
 			07 48 61 52 38<br>
-			<a href="https://www.bourgargental.fr/" target="_blank"> Bourg Argental </a><br> <!-- Lien vers la ville dans un nouvel onglet -->
+			<a href="https://www.bourgargental.fr/" target="_blank"> Bourg Argental </a><br><br> <!-- Lien vers la ville dans un nouvel onglet -->
+			Liens utiles :<br>
+			<a href="mailto:adycabanel@gmail.com?subject=Contact via le Portfolio" target="_blank">adycabanel@gmail.com</a><br>
+			<a href="https://www.linkedin.com/in/adrien-cabanel-4b7245231/" target="_blank">LinkedIn</a><br>
+			<a href="https://github.com/Adridrou42" target="_blank">Github</a><br>
 		</body>
 
 </html>
