--- a/html/01_formation.html
+++ b/html/01_formation.html
@@ -6,6 +6,7 @@
 	</head>
 		<body class="formations">
             <br><h2 class="formations">MES FORMATIONS</h2> <!-- Titre -->
+			<br> <!-- Texte -->
 			<table align="center"> <!-- Tableau des formations -->
 				<tr>
 					<th colspan="4" style="background-color: rgba(255, 0, 0, 0.377);">Tableau des études</th>
