--- a/html/02_experiences.html
+++ b/html/02_experiences.html
@@ -5,7 +5,12 @@
 		<meta charset="UTF-8">
 	</head>
 	<body class="experiences">
-            <br><h2 class="experiences">MES EXPÉRIENCES PROFESSIONELLES</h2> <!-- Titre -->
-            Stage d’observation dans une horlogerie fin 4ème.<br> <!-- Texte -->
+        <br><h2 class="experiences">MES EXPÉRIENCES PROFESSIONELLES</h2> <!-- Titre -->
+		<br> <!-- Texte -->
+        Stage d’observation dans une horlogerie fin 4ème.<br><br>
+		Également, j'ai un peu d'expérience en programmation grâce à mon Bac NSI.<br>
+		J'y ai vu les bases de la programmation en Python jusqu'à la programmation objets et jusqu'au tri fusion.<br>
+		J'ai également les bases du HTML/CSS et du SQL.<br><br>
+		Un stage chez <strong>VOUS</strong> serait parfait pour allonger cette liste !<br>
 	</body>
 </html>
