--- a/html/03_technos.html
+++ b/html/03_technos.html
@@ -6,6 +6,7 @@
 	</head>
 	<body class="technologies">
         <br><h2 class="technologies">LES TECHNOLOGIES MAÎTRISÉES</h2> <!-- Titre -->
+		<!-- Texte -->
 		<ul> <!-- Liste des technos maîtrisées -->
 			<strong>Programmation</strong>
 			<li>Python</li>
