--- a/html/04_projet.html
+++ b/html/04_projet.html
@@ -6,6 +6,11 @@
 	</head>
 	<body class="projet">
             <br><h2 class="projet">MES PROJETS PROFESSIONNELS</h2> <!-- Titre -->
-            Choper un <em>bon métier</em>.<br> <!-- Texte -->
+			<br> <!-- Texte -->
+            Finir mes deux années de <strong>BTS SIO</strong> pour enchaîner sur une <strong>licence professionnelle</strong>.<br>
+			Je prévois de <em>probablement</em> poursuivre sur un <strong>master</strong>.<br><br>
+			Comme projet personnel, je suis en train de coder un <strong>jeu vidéo</strong> en <em>C#</em> avec <em>Unity</em>.<br>
+			Ce jeu sera disponible gratuitement sur <a href="https://github.com/Adridrou42">Github</a> une fois terminé.<br>
+			<a href="../images/unity_game.png" target="_blank"><img src="../images/unity_game.png" alt="Aperçu du jeu en cours de développement" id="unity_game"></a><br>
 	</body>
 </html>
