--- a/html/05_interets.html
+++ b/html/05_interets.html
@@ -6,7 +6,7 @@
 	</head>
 	<body class="interets">
             <br><h2 class="interets">MES CENTRES D'INTÉRÊTS</h2> <!-- Titre -->
-			 <!-- Texte -->
+			<br> <!-- Texte -->
             J’aime jouer aux <em>jeux vidéo</em> et écouter de la <em>musique.</em><br>
 			Je code aussi quelques <strong>programmes</strong> par plaisir.
 	</body>
